feat: 배포 테스트
* 테스트용 커밋

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "homepage": "https://cloud0406.github.io/github_page_practice",
   "name": "github_page_practice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -18,8 +20,10 @@
   "bugs": {
     "url": "https://github.com/cloud0406/github_page_practice/issues"
   },
-  "homepage": "https://cloud0406.github.io/github_page_practice",
   "devDependencies": {
     "gh-pages": "^5.0.0"
+  },
+  "dependencies": {
+    "webpack": "^5.87.0"
   }
 }
