--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -21,7 +21,8 @@
     "url": "https://github.com/cloud0406/github_page_practice/issues"
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "webpack": "^5.87.0"
