--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://cloud0406.github.io/github_page_practice/index.html",
+  "homepage": "https://cloud0406.github.io/github_page_practice/",
   "name": "github_page_practice",
   "version": "1.0.0",
   "description": "",
